--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     <link
       rel="apple-touch-icon"
       sizes="180x180"
-      href="/apple-icon-180x180.png"
+      href="./apple-icon-180x180.png"
     />
     <!--
       manifest.json provides metadata used when your web app is installed on a
